Breadcrumbs and share widget finished.

--- a/src/html/partials/main.hbs
+++ b/src/html/partials/main.hbs
@@ -10,10 +10,10 @@
 
 	<title>{{page.meta_title}}</title>
 
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="./favicon.ico">
 
-	<link rel="stylesheet" href="css/uikit-theme.min.css" />
-	<link rel="stylesheet" href="css/main.min.css" />
+	<link rel="stylesheet" href="./css/uikit-theme.min.css" />
+	<link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body>
@@ -169,10 +169,10 @@
 		{{/ukContainer}}
 	</footer>
 
-	<script src="js/svgxuse.min.js"></script>
-	<script src="js/uikit-core.min.js"></script>
-	<script src="js/nbkit.js"></script>
-	<script src="js/main.js"></script>
+	<script src="./js/svgxuse.min.js"></script>
+	<script src="./js/uikit-core.min.js"></script>
+	<script src="./js/nbkit.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 
 </html>
