--- a/src/scss/abstracts/uikit/_variables.scss
+++ b/src/scss/abstracts/uikit/_variables.scss
@@ -126,7 +126,7 @@ $grid-large-gutter-horizontal-l: $global-large-gutter;
 //
 // Breadcrumb
 //
-$breadcrumb-item-color: $global-muted-color;
+$breadcrumb-item-color: $black;
 $breadcrumb-divider: '/';
 $breadcrumb-divider-margin-horizontal: $global-margin;
 $breadcrumb-divider-color: $global-color;
