--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,7 @@
 @import 'components/links-section';
 @import 'components/stoat-animation';
 @import 'components/links-box';
-@import 'components/share-widget';
+@import 'components/shareWidget';
 // +++ Generated components will be added above this line
 
 .nb {
