--- a/src/html/partials/nb/nbStyleguide.hbs
+++ b/src/html/partials/nb/nbStyleguide.hbs
@@ -1,26 +1,6 @@
-<div class='share-widget uk-position-fixed uk-position-left uk-position-center-left uk-visible@s'>
-	<div class='uk-position-relative'>
-		<img class='shape' src='./img/listing-images-frame-bg.svg' data-uk-svg alt='image'>
-		<span>share on</span>
-		<div class='share-widget-links uk-flex uk-flex-column'>
-			<a href='#' aria-label='Visit our Facebook page'>
-				<svg viewBox="0 0 512 512">
-					<use xlink:href="./symbol/icons.svg#facebook"></use>
-				</svg>
-			</a>
-			<a href='#' aria-label='Visit our Twitter page'>
-				<svg viewBox="0 0 512 512">
-					<use xlink:href="./symbol/icons.svg#twitter"></use>
-				</svg>
-			</a>
-			<a href='#' class='font-envelope' aria-label='Contact us via emal'>
-				<svg viewBox="0 0 512 512">
-					<use xlink:href="./symbol/icons.svg#envelope"></use>
-				</svg>
-			</a>
-		</div>
-	</div>
-</div>
+{{!-- {{> shareWidget}} --}}
+{{> shareWidget items=items.shareWidget title="Share widget"}}
+
 {{#*inline "blocks"}}
 {{#> content}}
 {{#*inline "body"}}
