--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -41,7 +41,7 @@
 		margin: 0 2px;
 	}
 
-	.nb-gallery-caption {
+	.gallery-caption {
 		font-size: 14px;
 		color: $secondary;
 		font-family: $font-roboto;
