--- a/src/html/partials/components/banner.hbs
+++ b/src/html/partials/components/banner.hbs
@@ -1,20 +1,18 @@
-<div class="banner home">
+<div class="banner {{#if (eq page.name "home")}}home{{else}}internal{{/if}}">
+	{{#if (eq page.name "home")}}
 	<div class='uk-position-relative'>
 		<div class='uk-position-left uk-width-1-2@s uk-width-5-6 banner-text'>
 			<h1>{{page.h1}}</h1>
 		</div>
 	</div>
 	<div class='banner-inner'>
-		<div class='uk-background-cover uk-background-fixed uk-height-1-1'
-			data-src="/img/home-banner.jpg" data-uk-img>
+		<div class='uk-background-cover uk-background-fixed uk-height-1-1' data-src="/img/home-banner.jpg" data-uk-img>
 		</div>
 	</div>
-</div>
-
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1498.5 846' style='position: absolute;' height='0' width='0'>
-	<defs>
-		<clipPath id='svgPathHero' clipPathUnits='objectBoundingBox' transform='scale(0.000667334, 0.00118203309)'>
-			<path class="st0" d="M1493.5,769.2c7.5,34.8,4.2,75.3,4.2,75c-582.1-0.8-1083.4,2.6-1497.3,1.7c0-40.9-0.2-26.8-0.3-40.5
+	<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1498.5 846' style='position: absolute;' height='0' width='0'>
+		<defs>
+			<clipPath id='svgPathHero' clipPathUnits='objectBoundingBox' transform='scale(0.000667334, 0.00118203309)'>
+				<path class="st0" d="M1493.5,769.2c7.5,34.8,4.2,75.3,4.2,75c-582.1-0.8-1083.4,2.6-1497.3,1.7c0-40.9-0.2-26.8-0.3-40.5
 	c0-7.2,0-17.1-0.1-28.1c0,24.4-0.1,50.2,0,5.4c0.1-22.3,1.5-64.9,2.5-82c1.3-25.4,3.8-40.4,7.6-58c13.2-58.6,25.8-67.6,48.7-89
 	c23-19.7,40.8-28.5,64.5-46.9c12.1-9.2,25.2-17.6,40.1-24.2c63.6-28,107.8-47.9,120.3-50.7c12.5-2.8,41.4-13.5,35.6-10.4
 	c22.5-11.9,45.5-24.6,69.8-37.1c3.3-1.7,7.3-2.9,10.9-4.4c23.1-9.7,53.3-23.9,77.7-34c19.3-8,39.7-21.4,59.5-29.8
@@ -25,6 +23,42 @@
 	c2.1-0.3,4.3-0.5,6.5-0.7c17.3-1.5,34.6-0.7,50.9,8.4c18.6,10.3,14,51.8,16.7,81.1c2.9,29.6-7.7,62.4,19.1,114.9
 	c11.2,21.9,28.2,43.5,42.7,65.5c1.7,2.6,3.3,5.3,4,8c7.3,28.5,18.7,92.6,11.8,166.9c-6.9,74.3-10.9,168.7-6.7,209.7
 	C1481.2,696,1484.1,725.6,1493.5,769.2z" />
-		</clipPath>
-	</defs>
-</svg>
+			</clipPath>
+		</defs>
+	</svg>
+	{{else}}
+	<div class="uk-overlay uk-position-bottom">
+		<div class='banner-inner'>
+			<div class='uk-background-cover uk-background-fixed uk-height-1-1' data-src='./img/internal-banner.jpg'
+				data-uk-img>
+				{{#> ukContainer size="small"}}
+				{{#*inline "out"}}
+				<div class='uk-inline uk-width-1-1 banner-title'>
+					<div class='uk-position-bottom uk-padding uk-padding-remove-horizontal'>
+						<h1>{{page.h1}}</h1>
+					</div>
+				</div>
+				{{/inline}}
+				{{/ukContainer}}
+			</div>
+		</div>
+	</div>
+	<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1500 661.2' style='position:absolute;' height='0' width='0'>
+		<defs>
+			<clipPath id='svgPathHeroInternal' clipPathUnits='objectBoundingBox'
+				transform='scale(0.00066666666, 0.00151240169)'>
+				<path class="st0"
+					d="M1496.7,607c5.8,25.7,1.8,53.1,1.7,52.9c-522.3-0.6-1035.9,1.8-1496.9,1.2c0-31.5-0.2-20.6-0.3-31.1
+	c0-5.5-1.1-68.7-1.2-77.2C0.1,580,6.2,444.5,7,323.2c0.4-64.7-4.1-132.6-3.2-145c1.5-19.6,4.3-30.7,8.6-43.5
+	c14.8-42.4,29.1-45.7,54.8-55.9c25.7-8.7,45.6-10.4,72-17.8c13.5-3.6,27.9-6.4,44.4-7.1c69.9-3.1,118-5.6,131.6-4.1
+	c13.5,1.5,44.7,1.6,38.4,2.3c24.3-2.6,48.9-31.7,74.9-34.3c3.5-0.3,7.8-0.1,11.6-0.2c24.6-0.7,56.6-2.8,82.4-3.5
+	c20.3-0.5,41.8-4.9,62.5-5.5c37.8-1.2,70-1.2,108.3-2.7c54.8-2.1,109.8,5.9,164.2,3.9c36.1-1.2,64.4,0.4,159.2-2
+	c30.3-0.8,164.1,3.5,186.3-1.7c6.2-1.4,39.4-3.1,60.4-5.7c4.3-0.5,11.1-0.6,19.1-0.4c4,0.1,8.3,0.2,12.8,0.4c1.1,0,2.2,0.1,3.4,0.2
+	c1.1,0.1,2.3,0.1,3.4,0.2c2.3,0.1,4.6,0.2,6.9,0.4c18.4,1.1,36.7,2.6,44.6,3.2c7.5,0.6,15.2,0.8,23.1,1c4,0.1,8,0.2,12,0.4
+	c2,0.1,4,0.2,6.1,0.3c2,0.1,4.1,0.2,6.1,0.4c16.3,1.3,32.8,4.2,49,13c18.4,9.9,17.2,48.8,22,70c11.3,48.4-6,130.3,15.3,163.1
+	c1.5,2.3,2.8,4.6,3.4,6.6c5.8,21.9,14.3,69.8,6.2,120.2c-8.2,50.3-14.2,115.3-11.6,144.8C1487.6,553.5,1489.4,574.7,1496.7,607z" />
+			</clipPath>
+		</defs>
+	</svg>
+	{{/if}}
+</div>
