Sighting form added.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'components/stoat-animation';
 @import 'components/links-box';
 @import 'components/shareWidget';
+@import 'components/timelinecard';
 // +++ Generated components will be added above this line
 
 .nb {
