Navigation, form, stoat map added and icons swiched

--- a/src/html/home.hbs
+++ b/src/html/home.hbs
@@ -15,7 +15,7 @@
 				Council with generous support from The National Lottery Heritage Fund and the EU’s LIFE
 				programme.
 			</p>
-			<a href='#' class='uk-button uk-button-primary uk-button-large'>Project overview</a>
+			{{> ukButton link="#" label="Project overview" style="primary" size="large" icon="arrow-right"}}
 		</div>
 	</div>
 </section>
@@ -109,7 +109,7 @@
 				</div>
 			</li>
 		</ul>
-		<a href='#' class='uk-button uk-button-primary uk-button-large'>View all news & events</a>
+		{{> ukButton link="#" label="View all news & events" style="primary" size="large" icon="arrow-right"}}
 	</div>
 </section>
 
