--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,8 @@
 @import 'components/links-box';
 @import 'components/shareWidget';
 @import 'components/timelinecard';
+@import 'components/gateway';
+@import 'components/stoat-map';
 // +++ Generated components will be added above this line
 
 .nb {
