--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,75 +1,3 @@
-// .footer {
-// 	font-size: 0.9rem;
-
-// 	@media (max-width: $breakpoint-mobile) {
-// 		font-size: 0.8rem;
-// 	}
-
-// 	.legal {
-// 		padding: $global-small-margin 0;
-
-// 		ul {
-// 			margin: 0;
-// 			padding: 0;
-
-// 			li {
-// 				display: inline-block;
-// 				list-style: none;
-// 				margin: 0;
-// 				padding: 0;
-
-// 				a {
-// 					color: $grey;
-
-// 					@include hover {
-// 						color: $black;
-// 					}
-// 				}
-
-// 				&::after {
-// 					content: '|';
-// 					color: $light-grey;
-// 					display: inline-block;
-// 					padding: 0 $global-small-margin;
-// 				}
-
-// 				&:last-child::after {
-// 					content: '';
-// 					padding: 0;
-// 				}
-
-// 				@media (max-width: $breakpoint-mobile) {
-// 					display: block;
-
-// 					&::after {
-// 						display: none;
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
-
-// 	.watermark {
-
-// 		a {
-// 			align-items: center;
-// 			color: $black;
-// 			display: inline-flex;
-// 			font-weight: 700;
-
-// 			@include hover {
-// 				color: #e11e2f;
-// 				text-decoration: none;
-// 			}
-
-// 			img {
-// 				height: 1rem;
-// 				margin-left: 2px;
-// 			}
-// 		}
-// 	}
-// }
-
 .footer {
 	padding: 80px 0 20px;
 
@@ -122,7 +50,6 @@
 
 			@include hover {
 				color: #e11e2f;
-				text-decoration: none;
 			}
 
 			img {
@@ -234,6 +161,13 @@
 		span {
 			font-family: $font-roboto;
 			font-size: 16px;
+		}
+
+		svg {
+			width: 16px;
+			height: 16px;
+			color: $secondary;
+			fill: $secondary;
 		}
 	}
 
