--- a/src/html/home.hbs
+++ b/src/html/home.hbs
@@ -123,12 +123,14 @@
 			<h2>Get Involved</h2>
 		</div>
 		<ul class='uk-grid-match uk-child-width-1-4@l uk-child-width-1-3@m uk-child-width-1-2@s' data-uk-grid
-			data-uk-height-match='target: .uk-card > .uk-card-body'>
+			data-uk-height-match='target: .uk-card'>
 			<li>
 				<div class='link-box uk-card'>
 					<div
 						class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-between uk-light uk-text-center'>
-						<span class="font-volunteer" role="presentation"></span>
+						<svg viewBox="0 0 24 24">
+							<use xlink:href="./symbol/icons.svg#volunteer"></use>
+						</svg>
 						<h3 class='uk-card-title uk-text-bold'>Volunteer</h3>
 					</div>
 					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
@@ -139,7 +141,10 @@
 					<div class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-right uk-light uk-text-center orkney-map'
 						data-uk-img style="background-image: url('./img/orkney-map.png');">
 						<span class="font-report-a-stoat" role="presentation">
-							<span class='stoat-pin font-brown-stoat' role='presentation'>
+							<span class='stoat-pin' role='presentation'>
+								<svg viewBox="0 0 24 24">
+									<use xlink:href="./symbol/icons.svg#brown-stoat"></use>
+								</svg>
 								<span class='pulse' role='presentation'></span>
 								<span class='pulse' role='presentation'></span>
 								<span class='pulse' role='presentation'></span>
@@ -155,7 +160,9 @@
 				<div class='link-box uk-card'>
 					<div
 						class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-between uk-light uk-text-center'>
-						<span class="font-offer-land-access" role="presentation"></span>
+						<svg viewBox="0 0 24 24">
+							<use xlink:href="./symbol/icons.svg#offer-land-access"></use>
+						</svg>
 						<h3 class='uk-card-title uk-text-bold'>Offer land access</h3>
 					</div>
 					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
@@ -165,7 +172,9 @@
 				<div class='link-box uk-card'>
 					<div
 						class='uk-card-body uk-height-1-1 uk-flex uk-flex-column uk-flex-between uk-light uk-text-center'>
-						<span class="font-donate" role="presentation"></span>
+						<svg viewBox="0 0 24 24">
+							<use xlink:href="./symbol/icons.svg#donate"></use>
+						</svg>
 						<h3 class='uk-card-title uk-text-bold'>Donate</h3>
 					</div>
 					<a href='#' class='uk-position-cover' aria-label="Find out more"></a>
