--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -16,7 +16,7 @@
 
 	h3 {
 		font-size: 18px;
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 	}
 
 	ul {
@@ -47,14 +47,18 @@
 			color: $secondary;
 			font-size: 13px;
 			font-weight: $bold;
+			position: relative;
+
+			img {
+				height: 0.8rem;
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				left: calc(100% + 3px);
+			}
 
 			@include hover {
 				color: #e11e2f;
-			}
-
-			img {
-				height: 0.9rem;
-				vertical-align: bottom;
 			}
 		}
 	}
@@ -66,6 +70,10 @@
 	@media (max-width: $breakpoint-small) {
 		justify-content: flex-start;
 		margin-top: 25px;
+	}
+
+	@media (max-width: $breakpoint-xsmall-max) {
+		padding: 80px 0 70px;
 	}
 }
 
@@ -98,7 +106,7 @@
 		padding-right: 40px;
 
 		.faq {
-			max-width: 460px;
+			max-width: 435px;
 			padding-bottom: 55px;
 		}
 	}
@@ -126,11 +134,6 @@
 }
 
 .footer-right {
-
-	li {
-		margin-bottom: 5px;
-	}
-
 	.uk-button-text {
 		font-size: 16px;
 		font-weight: 400;
@@ -157,6 +160,12 @@
 		font-size: 18px;
 		margin-top: 25px;
 		display: block;
+		transition: $speed $timing;
+
+		span,
+		svg {
+			transition: $speed $timing;
+		}
 
 		span {
 			font-family: $font-roboto;
@@ -169,13 +178,14 @@
 			color: $secondary;
 			fill: $secondary;
 		}
-	}
 
-	@include hover {
-		color: $brick-dark;
+		@include hover {
+			color: $brick-dark;
 
-		&::before {
-			background-color: $brick-dark;
+			svg {
+				color: $brick-dark;
+				fill: $brick-dark;
+			}
 		}
 	}
 
@@ -195,6 +205,10 @@
 .footer-bottom {
 	padding-top: 10px;
 
+	.legal {
+		margin-bottom: 0;
+	}
+
 	a,
 	span,
 	li {
@@ -206,6 +220,14 @@
 	li {
 		&:not(:last-of-type) {
 			padding-right: 20px;
+		}
+	}
+
+	a {
+		transition: $speed $timing;
+
+		@include hover {
+			color: $brick;
 		}
 	}
 
