Link boxes finished.

--- a/src/html/home.hbs
+++ b/src/html/home.hbs
@@ -66,7 +66,7 @@
 		<ul class='uk-grid-match uk-grid-large uk-child-width-1-2@m' data-uk-grid
 			data-uk-height-match=".link-box-title">
 			<li>
-				<div class='link-box-alt uk-card'>
+				<div class='link-box-alt js-link-box uk-card'>
 					<span class="uk-text-bold">News</span>
 					<div class='uk-card-media-top uk-background-cover' data-src='./img/link-img-1.jpg' data-uk-img>
 					</div>
@@ -75,7 +75,7 @@
 							<span class="uk-text-italic">3 Dec 2019</span>
 							<h3 class='uk-card-title'>Welcome to the 83rd Stoat Snippet!</h3>
 						</div>
-						<div class='uk-position-absolute link-box-text'>
+						<div class='link-box-text'>
 							<p>Tracking tunnels – also known as footprint tunnels - are used to detect or
 								monitor the presence of mammals in an area by identifying their footprints...
 							</p>
@@ -86,7 +86,7 @@
 				</div>
 			</li>
 			<li>
-				<div class='link-box-alt uk-card'>
+				<div class='link-box-alt js-link-box uk-card'>
 					<div class='uk-card-media-top uk-background-cover' data-src='./img/link-img-2.jpg' data-uk-img>
 					</div>
 					<span class="uk-text-bold">Event</span>
@@ -98,7 +98,7 @@
 								Heritage Lottery Fund support
 							</h3>
 						</div>
-						<div class='uk-position-absolute link-box-text'>
+						<div class='link-box-text'>
 							<p>A short description text should gently catch the user's eye, initiating the
 								reading
 								of the page content.</p>
