IE11 scss included

--- a/src/html/home.hbs
+++ b/src/html/home.hbs
@@ -79,7 +79,7 @@
 							<p>Tracking tunnels – also known as footprint tunnels - are used to detect or
 								monitor the presence of mammals in an area by identifying their footprints...
 							</p>
-							<a href='#' class='uk-button uk-button-default uk-button-small'>Continue reading</a>
+							{{> ukButton link="#" label="Continue reading" style="default" icon="arrow-right" size="small"}}
 						</div>
 					</div>
 					<a href='#' class='read-more' aria-label='Continue reading'></a>
@@ -102,7 +102,7 @@
 							<p>A short description text should gently catch the user's eye, initiating the
 								reading
 								of the page content.</p>
-							<a href='#' class='uk-button uk-button-default uk-button-small'>Continue reading</a>
+							{{> ukButton link="#" label="Continue reading" style="default" icon="arrow-right" size="small"}}
 						</div>
 					</div>
 					<a href='#' class='read-more' aria-label='Continue reading'></a>
