--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -83,6 +83,7 @@
                     color: $white;
                     fill: $white;
                     width: 12px;
+                    height: 12px;
                 }
 
                 &::after {
